fix(ProjectsSection): correct horizontal scroll behavior

--- a/src/components/projects/projectsItem/ProjectsItem.module.scss
+++ b/src/components/projects/projectsItem/ProjectsItem.module.scss
@@ -2,13 +2,14 @@
 @use "../../../styles/abstracts/mixins" as *;
 
 .projectsItem {
+  flex: 0 0 auto;
   display: flex;
   justify-content: start;
   width: 100%;
+  min-height: 70vh;
 
   @include desktop {
     flex: 0 0 100vw;
-    height: 100%;
     padding-inline: 60px;
   }
 
@@ -26,19 +27,25 @@
     }
 
     @include mobile {
-      gap: 40px;
+      gap: 20px;
     }
   }
 }
 
 .projectImage {
-  height: auto;
-  width: 530px;
+  flex-grow: 0;
+  flex-shrink: 1;
+  max-width: 530px;
   object-fit: cover;
   border-radius: var(--border-radius-large);
+
+  @include mobile {
+    max-height: 20vh;
+  }
 }
 
 .projectContent {
+  flex: 1 0 auto;
   display: flex;
   flex-direction: column;
   align-items: flex-start;
