--- a/src/components/projects/projectsList/ProjectsList.module.scss
+++ b/src/components/projects/projectsList/ProjectsList.module.scss
@@ -3,7 +3,6 @@
 .projectsList {
   display: flex;
   gap: 140px;
-  width: max-content;
   padding-left: 0;
 
   @include desktop {
